fix: add missing semicolon in moccasin dark mode CSS (#435)

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -112,7 +112,7 @@
   /* dark mode */
   [data-md-color-scheme="slate"] .md-typeset .moccasin > .admonition-title,
   [data-md-color-scheme="slate"] .md-typeset .moccasin > summary {
-    background-color: rgb(246, 242, 233)
+    background-color: rgb(246, 242, 233);
   }
 
 
